asus_fanmode: Try to find CPU hwmon if it's not set.

--- a/asus_fanmode.conf
+++ b/asus_fanmode.conf
@@ -1,6 +1,8 @@
 
 # Path to CPU temperature input
-cpu_temp = /sys/class/hwmon/hwmon3/temp1_input
+#  Daemon will try to find it automatically
+#  If it doesn't uncomment and set proper path
+# cpu_temp = /sys/class/hwmon/hwmon3/temp1_input
 cpu_temp_divider = 1000
 
 # Path to fan boost mode
