asus_fanmode: Use throttle thermal policy device by default

--- a/asus_fanmode.conf
+++ b/asus_fanmode.conf
@@ -5,8 +5,8 @@
 # cpu_temp = /sys/class/hwmon/hwmon3/temp1_input
 cpu_temp_divider = 1000
 
-# Path to fan boost mode
-fan_mode = /sys/devices/platform/asus-nb-wmi/fan_boost_mode
+# Path to fan boost mode or throttle thermal policy
+fan_mode = /sys/devices/platform/asus-nb-wmi/throttle_thermal_policy
 
 # Modes
 mode_silent    = 2
