--- a/asus_fanmode.conf
+++ b/asus_fanmode.conf
@@ -3,10 +3,13 @@
 #  Daemon will try to find it automatically
 #  If it doesn't uncomment and set proper path
 # cpu_temp = /sys/class/hwmon/hwmon3/temp1_input
+
 cpu_temp_divider = 1000
 
 # Path to fan boost mode or throttle thermal policy
-fan_mode = /sys/devices/platform/asus-nb-wmi/throttle_thermal_policy
+#  Daemon will try to find it automatically
+#  If it doesn't uncomment and set proper path
+# fan_mode = /sys/devices/platform/asus-nb-wmi/throttle_thermal_policy
 
 # Modes
 mode_silent    = 2
